# socio_wave_activate_service_account

./: main.py  pyproject.toml
src/api/: __init__.py  tg.py  vk.py
src/core/: config.py  database.py
src/core/cfg/: .env.example
src/models/: __init__.py  pydanitc_models.py  sqlalchemy_models.py
src/repo/: repository.py
src/utils/: crypto.py  token.py
