[project]
name = "activate-service-accounts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=47.0.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.3",
    "sqlalchemy>=2.0.49",
    "telethon>=1.43.2",
]
